# bytecode-lc

./: .gitignore  .hlint.yaml  README.md  flake.nix  justfile  lambda-calculus-diagram.cabal  main.lc
libs/: std.lc
src/: Main.hs
src/LCDiagram/: Args.hs  Options.hs  Parser.hs  Repl.hs  Types.hs
src/LCDiagram/Bytecode/: Compiler.hs  Execution.hs  Interpreter.hs  Parser.hs  Types.hs
src/LCDiagram/Repl/: Commands.hs  Completion.hs  Types.hs
