cabal-version:      2.4
name:               lambda-calculus-diagram
version:            0.1.0.0
license:            MIT
copyright:          2022 Perigord Truffle

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    OverloadedLists
    OverloadedLabels
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base                >=4.13.0.0 && <4.18.0.0.0
    , containers
    , directory
    , filepath
    , haskeline
    , megaparsec
    , parser-combinators
    , parsers
    , mtl
    , relude              >=1.0
    , shower
    , PyF
    , lens
    , generic-lens
    , vector

  hs-source-dirs:     src
  default-language:   Haskell2010

executable lc
  import:        shared
  other-modules:
    LCDiagram.Bytecode.Parser
    LCDiagram.Bytecode.Compiler
    LCDiagram.Bytecode.Execution
    LCDiagram.Bytecode.Types
    LCDiagram.Bytecode.Interpreter
    LCDiagram.Parser
    LCDiagram.Repl

  main-is:       Main.hs
