cabal-version:      2.4
name:               lambda-calculus-diagram
version:            0.1.0.0
license:            MIT
copyright:          2022 Perigord Truffle
synopsis:           A Bytecode Interpreted Lambda Calculus
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base                >=4.13.0.0 && <4.18.0.0.0
    , containers
    , directory
    , exceptions
    , filepath
    , generic-lens
    , haskeline
    , lens
    , megaparsec
    , mtl
    , parser-combinators
    , parsers
    , PyF
    , relude
    , shower

  hs-source-dirs:     src
  default-language:   Haskell2010

executable lc
  import:        shared
  other-modules:
    LCDiagram.Bytecode.Compiler
    LCDiagram.Bytecode.Execution
    LCDiagram.Bytecode.Interpreter
    LCDiagram.Bytecode.Parser
    LCDiagram.Bytecode.Types
    LCDiagram.Options
    LCDiagram.Parser
    LCDiagram.Repl

  main-is:       Main.hs
